# QueryOS_Automous_SQL_Generation_Solver

./: .gitignore  README.md  schema_discovery_agent.py  sql_agent.py  sql_eval_log.txt  sql_writer.py  train_sql_agent_stage1.py
__MACOSX/: ._train
cleaned_query_os/: README.md  pyproject.toml  queryos_config.yaml  queryos_vllm_config.yaml
cleaned_query_os/database_skills/debit_card_specializing/: skills.md
cleaned_query_os/examples/: run_query.py
cleaned_query_os/general_mistake_extractor/: README.md  build_general_mistakes.py  constants.py  extractor.py  io_utils.py  mistake_prompts.py  runner.py  taxonomy.py  text_utils.py
cleaned_query_os/query_os/: __init__.py  cli.py  config.py  database_skills.py  llm.py  metadata.py  prompts.py  result_compare.py  schema_discovery_agent.py  sql_agent.py  sql_validator.py  sql_writer.py  sqlite_executor.py  state.py  state_diff.py  tracing.py
dev_20240627/: build_failure_memory.py  build_table_description_json.py  recheck_true_errors.py
dev_20240627-2/: build_failure_memory.py
raw_query_os_original/: README.md  bash_launch_stage2.sh  shared_states.py  test_reward_calculation.py  tools.py  train_sql_agent.py  train_sql_agent_stage2.py
